--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
         />
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="styles.css" />
         <title>Loading Animation | code_wars_official</title>
     </head>
     <body>
